--- a/config/validation.yml
+++ b/config/validation.yml
@@ -6,6 +6,7 @@ train_embeddings: False
 encoder_hidden_states: [100, 50]
 decoder_hidden_states: [50, 100]
 discriminator_hidden_states: [10, 10]
-learn_rate: 0.0003
-sentence_length: 3
+learn_rate: 0.01
+sentence_length: 5
 batch_size: 10
+debug: False
