--- a/config/validation_word_index.yml
+++ b/config/validation_word_index.yml
@@ -1,8 +1,8 @@
 source_file: 'datasets/yelp/negative_reviews.json'
 load_model: True
-limit_sentences:
+limit_sentences: 10
 number_of_epochs: 1000
-batch_size: 100
+batch_size: 3
 translation_hidden_size: 1000
 train_embeddings: True
 word_embedding_size: 50
@@ -10,5 +10,7 @@ encoder_hidden_states: [500, 100]
 decoder_hidden_states: [100, 500]
 discriminator_hidden_states: [10, 10]
 learn_rate: 0.001
-sentence_length: 10
+sentence_length: 3
 debug: False
+dropout: 0.5
+discriminator_dropout: 0
