--- a/config/validation_word_index.yml
+++ b/config/validation_word_index.yml
@@ -1,17 +1,18 @@
-source_file: 'datasets/yelp/negative_reviews.json'
 load_model: True
-limit_sentences: 10
-number_of_epochs: 1000
-batch_size: 3
-translation_hidden_size: 1000
+limit_sentences: 5
+number_of_epochs: 200
+batch_size: 5
+translation_hidden_size: 100
 train_embeddings: True
-word_embedding_size: 50
+word_embedding_size: 100
 encoder_hidden_states: [1000, 500]
 decoder_hidden_states: [1000]
 discriminator_hidden_states: [10, 10]
-learn_rate: 0.001
+learn_rate: 0.0001
 sentence_length: 3
 debug: False
-dropout: 0
+dropout: 0.0
 discriminator_dropout: 0
+allowed_grad_change: 0.1
+grad_former_weight: 0.95
 bidi: False
