Adding min word occurence

--- a/config/validation_word_index.yml
+++ b/config/validation_word_index.yml
@@ -1,8 +1,9 @@
 source_file: 'datasets/yelp/negative_reviews.json'
 load_model: True
-limit_sentences: 10
-number_of_epochs: 1000
-batch_size: 3
+limit_sentences:
+min_word_occurrences: 2
+number_of_epochs: 100
+batch_size: 10
 translation_hidden_size: 1000
 train_embeddings: True
 word_embedding_size: 50
@@ -10,8 +11,8 @@ encoder_hidden_states: [1000, 500]
 decoder_hidden_states: [1000]
 discriminator_hidden_states: [10, 10]
 learn_rate: 0.001
-sentence_length: 3
+sentence_length: 5
 debug: False
-dropout: 0
+dropout: 0.1
 discriminator_dropout: 0
 bidirectional: True
