--- a/config/validation_word_index.yml
+++ b/config/validation_word_index.yml
@@ -8,6 +8,9 @@ model:
   dropout: 0.0
   bidirectional_encoder: False
   curriculum_training: False
+  distance_loss: 1.0
+  margin: 0.5
+  random_words_size: 10
 
 embedding:
   min_word_occurrences: 0
