--- a/config/validation_word_index.yml
+++ b/config/validation_word_index.yml
@@ -1,13 +1,16 @@
 model:
-  number_of_epochs: 500
+  number_of_epochs: 5000
   batch_size: 10
-  translation_hidden_size: 0
+  translation_hidden_size: 1000
   encoder_hidden_states: [1500, 1000, 500]
   decoder_hidden_states: [1000, 1500]
-  learn_rate: 0.0035
+  learn_rate: 1.0
   dropout: 0.1
   bidirectional_encoder: False
   curriculum_training: True
+  distance_loss: 1.0
+  margin: 0.5
+  random_words_size: 10
 
 embedding:
   min_word_occurrences: 2
