--- a/config/gan.yml
+++ b/config/gan.yml
@@ -6,19 +6,25 @@ model:
   translation_hidden_size: 1000
   encoder_hidden_states: [1500, 1000, 500]
   decoder_hidden_states: [1000, 1500]
-  discriminator_hidden_states: [1000]
-  discriminator_dense_hidden_size: 500
 #  learn_rate: 0.0001
   learn_rate: 0.0035
   dropout: 0.1
   discriminator_dropout: 0.1
   bidirectional_encoder: False
-  bidirectional_discriminator: False
 #  curriculum_training: True
   reconstruction_coefficient: 1.0
   semantic_distance_coefficient: 1.0
-  discriminator_type: 'embedding'
-#  discriminator_type: 'content'
+#  discriminator_type: 'embedding'
+  discriminator_type: 'content'
+
+discriminator_embedding:
+  hidden_states: [1000]
+  dense_hidden_size: 500
+  bidirectional: False
+
+discriminator_content:
+  hidden_states: [1000]
+
 
 embedding:
 #  min_word_occurrences: 2
@@ -27,7 +33,7 @@ embedding:
   word_size: 50
   should_train: True
 
-loss:
+#loss:
 #  upper_range: 5.0
 #  lower_range: 3.0
 
