--- a/config/validation_word_index.yml
+++ b/config/validation_word_index.yml
@@ -1,17 +1,17 @@
 model:
-  number_of_epochs: 500
-  batch_size: 10
-  translation_hidden_size: 0
-  encoder_hidden_states: [1500, 1000, 500]
-  decoder_hidden_states: [1000, 1500]
-  learn_rate: 0.0035
-  dropout: 0.1
+  number_of_epochs: 5000
+  batch_size: 5
+  translation_hidden_size: 250
+  encoder_hidden_states: [1000, 500, 100]
+  decoder_hidden_states: [500, 1000]
+  learn_rate: 0.01
+  dropout: 0.0
   bidirectional_encoder: False
-  curriculum_training: True
+  curriculum_training: False
 
 embedding:
-  min_word_occurrences: 2
-  word_size: 50
+  min_word_occurrences: 0
+  word_size: 10
   should_train: True
 
 loss:
@@ -20,6 +20,6 @@ loss:
 
 sentence:
   #limit: 300000
-  limit: 3
+  limit: 5
   min_length: 3
   max_length: 15
