--- a/config/gan.yml
+++ b/config/gan.yml
@@ -14,8 +14,8 @@ model:
 #  curriculum_training: True
   reconstruction_coefficient: 1.0
   semantic_distance_coefficient: 1.0
-#  discriminator_type: 'embedding'
-  discriminator_type: 'content'
+  discriminator_type: 'embedding'
+#  discriminator_type: 'content'
 
 discriminator_embedding:
   hidden_states: [1000]
