better statistics for faster training

--- a/config/operational.yml
+++ b/config/operational.yml
@@ -2,5 +2,5 @@ load_model: True
 debug: False
 print_device: False
 run_optimizer: True
-use_tensorboard: True
+tensorboard_frequency: 100
 validation_batch_frequency: 100
