--- a/config/validation_word_index.yml
+++ b/config/validation_word_index.yml
@@ -1,11 +1,11 @@
 model:
   number_of_epochs: 5000
-  batch_size: 5
-  translation_hidden_size: 250
-  encoder_hidden_states: [1000, 500, 100]
-  decoder_hidden_states: [500, 1000]
-  learn_rate: 0.01
-  dropout: 0.0
+  batch_size: 10
+  translation_hidden_size: 1000
+  encoder_hidden_states: [1500, 1000, 500]
+  decoder_hidden_states: [1000, 1500]
+  learn_rate: 1.1
+  dropout: 0.1
   bidirectional_encoder: False
   curriculum_training: False
   distance_loss: 1.0
@@ -14,9 +14,9 @@ model:
   random_words_size: 10
 
 embedding:
-  min_word_occurrences: 0
-  word_size: 10
-  should_train: True
+  min_word_occurrences: 2
+  word_size: 50
+  should_train: False
 
 loss:
   upper_range: 5.0
