--- a/config/validation_embedding.yml
+++ b/config/validation_embedding.yml
@@ -7,9 +7,9 @@ model:
   dropout: 0.1
   bidirectional_encoder: False
   curriculum_training: False
-#  margin_coefficient: 1.
+  margin_coefficient: 1.
+#  margin: 1.0
   random_words_size: 10
-  margin: 1.0
 
 embedding:
   min_word_occurrences: 2
