--- a/config/validation_word_index.yml
+++ b/config/validation_word_index.yml
@@ -1,17 +1,17 @@
 model:
   number_of_epochs: 5000
-  batch_size: 5
-  translation_hidden_size: 150
-  encoder_hidden_states: [45, 30]
-  decoder_hidden_states: [45]
-  learn_rate: 0.1
+  batch_size: 10
+  translation_hidden_size: 3000
+  encoder_hidden_states: [1500, 1000, 500]
+  decoder_hidden_states: [1000, 1500]
+  learn_rate: 0.01
   dropout: 0.1
   bidirectional_encoder: False
-  curriculum_training: False
+  curriculum_training: True
 
 embedding:
   min_word_occurrences: 0
-  word_size: 10
+  word_size: 100
   should_train: False
 
 loss:
@@ -20,6 +20,6 @@ loss:
 
 sentence:
   #limit: 300000
-  limit: 5
+  limit: 1000
   min_length: 3
   max_length: 15
