when to ignore disc

--- a/config/gan.yml
+++ b/config/gan.yml
@@ -18,6 +18,7 @@ model:
   reconstruction_coefficient: 1.0
   semantic_distance_coefficient: 1.0
   minimal_accuracy_for_discriminator: 0.2
+  maximal_loss_for_discriminator: 1.5
 #  discriminator_type: 'embedding'
   discriminator_type: 'content'
 #  loss_type: 'cross_entropy'
