fix for embedding discriminator

--- a/config/gan.yml
+++ b/config/gan.yml
@@ -42,8 +42,8 @@ margin_loss2:
   margin: 1.0
 
 discriminator_embedding:
-  hidden_states: [1000]
-  dense_hidden_size: 500
+  encoder_hidden_states: : [1000]
+  hidden_states: [500]
   bidirectional: False
 
 discriminator_content:
