--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 data/embeddings-130441-* filter=lfs diff=lfs merge=lfs -text
 *.obj filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
+*.txt filter=lfs diff=lfs merge=lfs -text
