--- a/config/gan.yml
+++ b/config/gan.yml
@@ -32,6 +32,8 @@ model:
   loss_type: 'margin2'
 #  discriminator_loss_type: 'regular'
   discriminator_loss_type: 'wasserstein'
+  #cell_type: 'LSTM'
+  cell_type: 'GRU'
 
 cross_entropy_loss:
   translation_hidden_size: 1000
@@ -54,7 +56,7 @@ discriminator_content:
   hidden_states: [1500]
 
 wasserstein_loss:
-  clip_value: 1.01
+  clip_value: 0.25
 
 embedding:
   min_word_occurrences: 2
@@ -66,7 +68,7 @@ embedding:
 #  lower_range: 3.0
 
 sentence:
-  limit: 30000
+  limit: 300000
 #  limit: 150
 #  min_length: 3
   min_length: 6
