--- a/config/gan.yml
+++ b/config/gan.yml
@@ -2,6 +2,7 @@ trainer:
   number_of_epochs: 5000
 #  number_of_epochs: 50
   batch_size: 100
+  validation_batch_size: 10
 #  batch_size: 10
   min_generator_steps: 10
   min_discriminator_steps: 1
@@ -69,6 +70,7 @@ embedding:
 
 sentence:
   limit: 300000
+  validation_limit: 10
 #  limit: 150
 #  min_length: 3
   min_length: 6
