--- a/config/gan.yml
+++ b/config/gan.yml
@@ -1,19 +1,19 @@
 trainer:
-  number_of_epochs: 5000
-#  number_of_epochs: 50
+  number_of_epochs: 100
+#  number_of_epochs: 30
   batch_size: 100
-  #  batch_size: 10
+#  batch_size: 10
   validation_batch_size: 10
   min_generator_steps: 10
   min_discriminator_steps: 1
 
 model:
-  initial_generator_epochs: 10
+  initial_generator_epochs: 8
 #  initial_generator_epochs: 2
   encoder_hidden_states: [1500, 1000, 500]
-  #encoder_hidden_states: [100]
+#  encoder_hidden_states: [100]
   decoder_hidden_states: [1000, 1500]
-  # decoder_hidden_states: [50]
+#  decoder_hidden_states: [50]
   learn_rate: 0.0035
 #  optimizer: 'gd'
 #  optimizer: 'adam'
@@ -35,7 +35,7 @@ model:
 #  discriminator_loss_type: 'regular'
   discriminator_loss_type: 'wasserstein'
   cell_type: 'LSTM'
-  #cell_type: 'GRU'
+#  cell_type: 'GRU'
 
 cross_entropy_loss:
   translation_hidden_size: 1000
@@ -51,17 +51,16 @@ margin_loss2:
 discriminator_embedding:
   include_content_vector: True
   encoder_hidden_states: [1500]
-  # encoder_hidden_states: [100]
+#  encoder_hidden_states: [100]
   hidden_states: [1500]
-  #hidden_states: [50]
+#  hidden_states: [50]
   bidirectional: False
 
 discriminator_content:
   hidden_states: [1500]
 
 wasserstein_loss:
-  clip_value: 0.51
-  #clip_value: 0.25
+  clip_value: 0.25
 
 embedding:
   min_word_occurrences: 2
@@ -74,9 +73,9 @@ embedding:
 
 sentence:
   limit: 300000
-  #limit: 30000
 #  limit: 150
   validation_limit: 1000
-#  min_length: 3
+#  validation_limit: 20
   min_length: 6
+#  min_length: 3
   max_length: 15
