--- a/config/gan.yml
+++ b/config/gan.yml
@@ -23,7 +23,6 @@ model:
   discriminator_dropout: 0.3
   bidirectional_encoder: False
 #  curriculum_training: True
-  reconstruction_coefficient: 10.0
   discriminator_coefficient: 0.00001
   minimal_accuracy_for_discriminator: 0.55
   discriminator_type: 'embedding'
@@ -32,6 +31,7 @@ model:
 #  cell_type: 'GRU'
 
 margin_loss2:
+#  random_words_size: 0
   random_words_size: 5
   margin: 1.0
 
@@ -45,7 +45,7 @@ discriminator_embedding:
 
 discriminator_content:
   hidden_states: [1500]
-  #hidden_states: [10]
+#  hidden_states: [10]
 
 wasserstein_loss:
   clip_value: 0.125
