--- a/config/operational.yml
+++ b/config/operational.yml
@@ -1,6 +1,7 @@
 load_model: True
 print_device: False
 run_optimizer: True
+#tensorboard_frequency: 0
 tensorboard_frequency: 100
 validation_batch_frequency: 100
 print_validation_full_batch_epoch_frequency: 10
