different learn rates for each component

--- a/config/gan.yml
+++ b/config/gan.yml
@@ -13,7 +13,8 @@ model:
 #  encoder_hidden_states: [100]
   decoder_hidden_states: [1000, 1500]
 #  decoder_hidden_states: [50]
-  learn_rate: 0.0035
+  generator_learn_rate: 0.0035
+  discriminator_learn_rate: 0.0035
 #  optimizer: 'gd'
 #  optimizer: 'adam'
   optimizer: 'rmsp'
@@ -60,6 +61,6 @@ embedding:
 sentence:
   limit: 300000
 #  limit: 150
-  min_length: 6
+  min_length: 15
 #  min_length: 3
   max_length: 15
