also consider the direction of the prediction

--- a/config/operational.yml
+++ b/config/operational.yml
@@ -6,3 +6,4 @@ run_optimizer: True
 tensorboard_frequency: 1000
 validation_batch_frequency: 1000
 #validation_batch_frequency: 10
+positive_is_positive: True
