--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@ data/embeddings-130441-* filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
 data/embeddings-* filter=lfs diff=lfs merge=lfs -text
 data/embeddings-53708-* filter=lfs diff=lfs merge=lfs -text
+regina_files/classifier_data/model.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+regina_files/language_data/model.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
